<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DocFlow</string>
    <string name="simple_menu_name">Simple Adapter</string>
    <string name="simple_menu_condensed">Simple</string>
    <string name="fancy_menu_name">Fancy Menu</string>
    <string name="fancy_menu_condensed">Fancy</string>
    <string name="expand_all_menu">Expand all</string>
    <string name="expand_all_condensed">Expand All</string>
    <string name="collapsible_menu_enable">Enable collapsible</string>
    <string name="collapsible_condensed_enable">Enable collapsible</string>
    <string name="collapsible_menu_disable">Disable collapsible</string>
    <string name="collapsible_condensed_disable">Disable collapsible</string>
    <string name="collapse_all_menu">Collapse all</string>
    <string name="collapse_all_condesed">Collapse all</string>
    <string name="expand_menu">Expand</string>
    <string name="expand_menu_condensed">Expand</string>
    <string name="delete_menu">Delete</string>
    <string name="delete_menu_condensed">Delete</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_data_traffic">Data traffic</string>
    <string name="title_activity_main">DocFlow</string>
    <string name="error_locate_failed">Unable to locate database file. Check error log for more information.</string>
    <string name="detailed">Detailed: </string>
    <string name="error">Error</string>
    <string name="title_activity_doc_detail">DocDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="docflow_dir">/mnt/sdcard/docflow/</string>
    <string name="docflow_settings">settings.xml</string>
    <string name="title_activity_server_selection">ServerSelectionActivity</string>
    <string name="add_server">Add server</string>
    <string name="select_server">Select server</string>
    <string name="server_name">Server name</string>
    <string name="server_url">Server url</string>
    <string name="server_active">Is active</string>
    <string name="save">Save</string>
    <string name="logout">LogOut</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="server_hint">http://serverip or host:port/container/XDocFlowService</string>
    <string name="title_activity_map_activitiy">MapActivitiy</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="style_file">/mnt/sdcard/socardb/spatialite_map_style.xml</string>
    <string name="socar_db">/mnt/sdcard/socardb/mydb.sqlite</string>
    <string name="docflow_db_path">/mnt/sdcard/docflow/db</string>
    <string name="l_download_file" formatted="false"><![CDATA[Downloading file size=%s, downloaded=%s]]></string>
    <string name="do_you_want_to_delete">გინდათ ჩანაწერის წაშლა???</string>
    <string name="do_you_want_to_empty">გინდათ გასუფთავება???</string>
    <string name="title_activity_document_files">Document Files</string>
    <string name="title_activity_document_status">Document Status</string>
    <string name="title_activity_data_traffic">DataTraffic</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="latest_mob">Mobile</string>
    <string name="delta_mob">Delta(Mob)</string>
    <string name="previous_mob">Previous(Mob)</string>
    <string name="latest">Full</string>
    <string name="previous">Previous</string>
    <string name="delta">Delta</string>
    <string name="device"><i>(device)</i></string>
    <string name="latest_myapp">DocFlow</string>
    <string name="delta_myapp">Delta*</string>
    <string name="previous_myapp">Previous*</string>
    <string name="mb">MB</string>
    <string name="kb">Kb</string>
    <string name="bt">Bt</string>
    <string name="traffic_mon">Used MB</string>
    <string name="update">UPDATE</string>
    <string name="doc_data">მონაცემები</string>
    <string name="doc_status">სტატუსი</string>
    <string name="date">თარიღი</string>
    <string name="doc_files">ფაილები</string>
    <string name="customer_info">აბონენტის ინფორმაცია</string>
    <string name="doc_type">დოკუმენტის ტიპი</string>
    <string name="customer">აბონენტი</string>
    <string name="please_select_doc_type">გთხოვთ შეიყვანოთ დოკუმენტის ტიპი</string>
    <string name="new_document">ახალი დოცუმენტი</string>
    <string name="new_document_cancelary">კანცელარიის #</string>
    <string name="please_select_cancelary">გთხოვთ შეიყვანოთ კანცელარიის #</string>
    <string name="title_activity_import_db">ImportDB</string>
    <string name="exported_db">exported.sqlite</string>
    <string name="docflow_db">exported.sqlite</string>
    <string name="invalid_user_name">მომხმარებლის სახელი არასწორია</string>
    <string name="invalid_pwd">პაროლი არასწორია</string>
    <string name="system_perm">თქვენ არ გაქვტ ამ სისტემაში შესვლის უფლება</string>
    <string name="new_version_avalable">New version avalable!!!</string>
    <string name="check_new_version">Maybe new version, please check!!!</string>
    <string name="update_now">Yes</string>

</resources>