<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <Button
        android:onClick="takeSnapshot"
        android:text="@string/update" />

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/received"
            android:textSize="20sp" />

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:text="@string/sent"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/latest"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latest_rx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="_"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_tx"
            android:gravity="right"
            android:text="_"
            android:textSize="20sp" />
    </TableRow>

 
    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/latest_mob"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latest_mob_rx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
             android:text="_"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_mob_tx"
            android:gravity="right"
             android:text="_"
            android:textSize="20sp" />
    </TableRow>

 

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TableRow>

        <TextView
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
            android:text="@string/latest_myapp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latest_myapp_rx"
            android:layout_marginRight="@dimen/margin_right"
            android:gravity="right"
             android:text="_"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_myapp_tx"
            android:gravity="right"
             android:text="_"
            android:textSize="20sp" />
    </TableRow>

 

</TableLayout>